Add main CSS file.

--- a/blueprints/dashboard/templates/dashboard/index.html
+++ b/blueprints/dashboard/templates/dashboard/index.html
@@ -1,3 +1,11 @@
 <!doctype html>
-<title>BotaniCam Dashboard</title>
-<h1>BotaniCam Dashboard</h1>
+<html>
+<head>
+  <link rel='stylesheet' href="{{ url_for('static', filename='main.css') }}">
+</head>
+
+{% set pageName = 'BotaniCam Dashboard' %}
+<title>{{pageName}}</title>
+<h1>{{pageName}}</h1>
+
+</html>
