--- a/blueprints/users/templates/users/list.html
+++ b/blueprints/users/templates/users/list.html
@@ -7,7 +7,7 @@
     <table class="table table-striped table-hover table-dark">
       <tr>
         <th colspan="5">
-          <h3>Users</h3>
+          <h3>Users</h3> <a href="{{url_for('users.add')}}">new</a>
         </th>
       </tr>
       <tr>
