--- a/blueprints/dashboard/templates/dashboard/index.html
+++ b/blueprints/dashboard/templates/dashboard/index.html
@@ -8,6 +8,7 @@
 <title>{{pageName}}</title>
 <h1>{{pageName}}</h1>
 
-<a href="{{ url_for( 'users.list' ) }}">Users</a>
+<p><a href="{{ url_for( 'users.list' ) }}">Users</a></p>
+<p><a href="{{ url_for( 'plants.list' ) }}">Plants</a></p>
 
 </html>
