Add edit functionality. Code duplication is getting out of hand, so need to consolidate.

--- a/blueprints/plants/templates/plants/list.html
+++ b/blueprints/plants/templates/plants/list.html
@@ -6,8 +6,8 @@
   {% else %}
     <table class="table table-striped table-hover table-dark">
       <tr>
-        <th colspan="5">
-          <h3>Plants</h3> <a href="{{url_for('plants.add')}}">new</a>
+        <th colspan="6">
+          <h3>Plants <a href="{{url_for('plants.add')}}">(new)</a></h3>
         </th>
       </tr>
       <tr>
@@ -15,19 +15,22 @@
         <th>Common Name</th>
         <th>Genus</th>
         <th>Species</th>
+        <th>Edit Plant</th>
         <th>Delete Plant</th>
       </tr>
     {% for plant in plants %}
       {% set plant_ref=url_for('plants.plant', id=plant.id) %}
       {% set del_ref=url_for('plants.delete', id=plant.id) %}
+      {% set edit_ref="window.location='{}'".format( url_for('plants.edit', id=plant.id) ) %}
       <tr id="{{plant.id}}">
         <td><a href="{{plant_ref}}">{{plant.id}}</a></td>
         <td>{{plant.common_name}}</td>
         <td>{{plant.genus}}</td>
         <td>{{plant.species}}</td>
+        <td><button onclick="{{edit_ref}}" class="btn btn-light">Edit Plant</button></td>
         <td>
           <form name="deletePlant" action="{{del_ref}}" method="post">
-          <button type="submit" class="btn btn-light" name="id" value="{{plant.id}}" class="link-button">Delete Plant</button>
+          <button type="submit" class="btn btn-light" class="link-button">Delete Plant</button>
           </form>
         </td>
       </tr>
