--- a/blueprints/plants/templates/plants/add.html
+++ b/blueprints/plants/templates/plants/add.html
@@ -3,7 +3,14 @@
 {% block content %}
 <div class="formwrapper">
   <h2 class="title">Plant</h2>
-  <form method="POST" action="{{ url_for( 'plants.add' ) }}">
+
+  {% if action == "edit" %}
+      {% set action_ref =  url_for('plants.edit', id=id) %}
+  {% else %}
+      {% set action_ref =  url_for('plants.add') %}
+  {% endif %}
+
+  <form method="POST" action="{{ action_ref }}">
       <div class="form-group">{{ form.common_name.label }} {{ form.common_name }}</div>
       <div class="form-group">{{ form.genus.label }} {{ form.genus(size=20) }}</div>
       <div class="form-group">{{ form.species.label }} {{ form.species(size=20) }}</div>
