--- a/blueprints/users/templates/users/add.html
+++ b/blueprints/users/templates/users/add.html
@@ -3,7 +3,14 @@
 {% block content %}
 <div class="formwrapper">
   <h2 class="title">User</h2>
-  <form method="POST" action="{{ url_for( 'users.add' ) }}">
+
+  {% if action == "edit" %}
+      {% set action_ref =  url_for('users.edit', id=id) %}
+  {% else %}
+      {% set action_ref =  url_for('users.add') %}
+  {% endif %}
+
+  <form method="POST" action="{{ action_ref }}">
       <div class="form-group">{{ form.first_name.label }} {{ form.first_name(size=20) }}</div>
       <div class="form-group">{{ form.last_name.label }} {{ form.last_name(size=20) }}</div>
       <div class="form-group">{{ form.email.label }} {{ form.email }}</div>
