--- a/blueprints/users/templates/users/list.html
+++ b/blueprints/users/templates/users/list.html
@@ -6,8 +6,8 @@
   {% else %}
     <table class="table table-striped table-hover table-dark">
       <tr>
-        <th colspan="5">
-          <h3>Users</h3> <a href="{{url_for('users.add')}}">new</a>
+        <th colspan="6">
+          <h3>Users <a href="{{url_for('users.add')}}">(new)</a></h3>
         </th>
       </tr>
       <tr>
@@ -15,20 +15,22 @@
         <th>First Name</th>
         <th>Last Name</th>
         <th>Email</th>
+        <th>Edit User</th>
         <th>Delete User</th>
       </tr>
     {% for user in users %}
       {% set user_ref=url_for('users.user', id=user.id) %}
       {% set del_ref=url_for('users.delete', id=user.id) %}
+      {% set edit_ref="window.location='{}'".format( url_for('users.edit', id=user.id) ) %}
       <tr id="{{user.id}}">
         <td><a href="{{user_ref}}">{{user.id}}</a></td>
         <td>{{user.first_name}}</td>
         <td>{{user.last_name}}</td>
         <td>{{user.email}}</td>
-        <!--td><a href="{{del_ref}}">DeleteIcon</a></td-->
+        <td><button onclick="{{edit_ref}}" class="btn btn-light">Edit User</button></td>
         <td>
           <form name="deleteUser" action="{{del_ref}}" method="post">
-          <button type="submit" class="btn btn-light" name="id" value="{{user.id}}" class="link-button">Delete User</button>
+          <button type="submit" class="btn btn-light" class="link-button">Delete User</button>
           </form>
         </td>
       </tr>
